--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "classnames": "^2.5.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.1",
     "sass": "^1.87.0",
