--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "wilsonforseattle",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://nkossally.github.io/wilsonforseattle",
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
@@ -13,7 +14,6 @@
     "classnames": "^2.5.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.1",
     "sass": "^1.87.0",
@@ -42,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
