--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jessica-for-edmonds",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://nkossally.github.io/jessicaforedmonds",
+  "homepage": "https://nkossally.github.io/jessica-for-edmonds",
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
